[tool.poetry]
name = "sceptre-request-resolver"
version = "0.0.2"
packages = [{ include = "resolver" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-request-resolver"
repository = "https://github.com/Sceptre/sceptre-request-resolver"
authors = ["Khai Do <zaro0508@gmail.com>"]
description = "A Sceptre resolver to make requests from REST API endpoints"
keywords = ["sceptre", "sceptre-resolver"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

[tool.poetry.plugins."sceptre.resolvers"]
"request" = "resolver.request:Request"

[tool.poetry.dependencies]
python = "^3.8.1"
validator-collection = "^1.5.0"
requests = "^2.28.0"

sceptre = { version = "^3.2.0", optional = true }

[tool.poetry.extras]
sceptre = ["sceptre"]

[tool.poetry.dev-dependencies]
coverage = "^7.2.2"
flake8 = "^6.0.0"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
twine = "^4.0.2"
tox = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
